# otuscpp-hw6

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  bintray.json.in  classes.html  classmy_1_1matrix-members.html  classmy_1_1matrix.html  classmy_1_1matrix_1_1Iterator-members.html  classmy_1_1matrix_1_1Iterator.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  matrix.h  matrix_8h.html  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h__incl.md5  matrix_8h_source.html  md_README.html  namespacemy.html  namespaces.html  pages.html  test__matrix_8cpp.html  test__matrix_8cpp__incl.map  test__matrix_8cpp__incl.md5  test_matrix.cpp  (+3 more)
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_c.js  all_d.js  classes_0.js  defines_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  pages_0.js  search.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js
